big update + button

--- a/404.html
+++ b/404.html
@@ -1,4 +1,41 @@
-404
-Page / trebuchets not found..
+<html>
 
-Only catapults and other inferior siege weapons.
+<head>
+
+    <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+
+    <div>
+
+        <h1>404</h1>
+
+
+        <div class="wrapper">
+
+            <div class="page">
+                Page
+            </div>
+
+            <div class="rest">
+                / trebuchets not found..
+            </div>
+
+        </div>
+
+        <div id="pic">
+        <a href="https://github.com/1A1eks" align="center" ><img src="button.jpeg"></a>
+        </div>
+        <p>
+
+            Only catapults and other inferior siege weapons available
+
+        </p>
+    </div>
+
+</body>
+
+
+</html>
