--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
         </div>
 
         <div id="pic">
-        <a href="https://github.com/1A1eks" align="center" ><img src="button.jpeg"></a>
+        <a href="https://github.com/1A1eks" align="center" ><img id="picture" src="button.jpeg"></a>
         </div>
         <p>
 
